--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,25 @@ apply from: 'dependencies.gradle'
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
+        gradlePluginPortal()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
     group = 'me.dm7.barcodescanner'
-    version = '1.9.13'
+    version = '1.9.14'
 
     repositories {
+        mavenCentral()
         google()
-        jcenter()
+        gradlePluginPortal()
     }
 
     ext {
@@ -28,12 +29,11 @@ allprojects {
 }
 
 subprojects {
-    afterEvaluate { Project project ->
+    afterEvaluate {
         ext.pluginContainer = project.getPlugins()
         if(ext.pluginContainer.hasPlugin("com.android.application") || ext.pluginContainer.hasPlugin("com.android.library")) {
             android {
                 compileSdkVersion versions.compile_sdk
-                buildToolsVersion versions.build_tools
 
                 android {
                     lintOptions {
@@ -44,18 +44,13 @@ subprojects {
                 defaultConfig {
                     minSdkVersion versions.min_sdk
                     targetSdkVersion versions.target_sdk
-                    versionCode 1913
-                    versionName "1.9.13"
+                    versionCode 1914
+                    versionName "1.9.14"
                 }
             }
         }
 
-        Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
-        def bintrayUser = properties.getProperty('bintray.user')
-        def bintrayApikey = properties.getProperty('bintray.apikey')
-
-        if(project.isLibrary && bintrayUser?.trim() && bintrayApikey?.trim()) {
+        if(project.isLibrary && false) {
             configure(project) {
                 apply plugin: 'com.github.dcendents.android-maven'
                 group = project.group                               // Maven Group ID for the artifact
@@ -98,7 +93,7 @@ subprojects {
 
                 apply plugin: 'com.jfrog.bintray'
 
-                version = '1.9.13'
+                version = '1.9.14'
 
                 if (project.hasProperty("android")) { // Android libraries
                     task sourcesJar(type: Jar) {
@@ -142,8 +137,4 @@ subprojects {
             }
         }
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10.1'
 }
