--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,18 @@
 ext.versions = [
-        compile_sdk   : 28,
+        compile_sdk   : 31,
         min_sdk       : 14,
         target_sdk    : 28,
-        build_tools   : "28.0.3",
-        support_lib   : "28.0.0",
         zxing         : "3.3.3",
-        barcodescanner: "1.9.13"
+        barcodescanner: "1.9.14",
+        annotaions    : "1.3.0",
+        app_compat    : "1.4.1",
+        material      : "1.5.0"
 ]
 
 ext.libraries = [
-        support_v4          : "com.android.support:support-v4:$versions.support_lib",
-        appcompat_v7        : "com.android.support:appcompat-v7:$versions.support_lib",
-        design_support      : "com.android.support:design:$versions.support_lib",
+        app_compat          : "androidx.appcompat:appcompat:$versions.app_compat",
+        android_annotations : "androidx.annotation:annotation:$versions.annotaions",
+        material            : "com.google.android.material:material:$versions.material",
         zxing_core          : "com.google.zxing:core:$versions.zxing",
         barcodescanner_core : "me.dm7.barcodescanner:core:$versions.barcodescanner",
         barcodescanner_zbar : "me.dm7.barcodescanner:zbar:$versions.barcodescanner",
