--- a/zbar-sample/build.gradle
+++ b/zbar-sample/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-//    implementation project(":zbar")
     implementation libraries.barcodescanner_zbar
-    implementation libraries.support_v4
-    implementation libraries.appcompat_v7
-    implementation libraries.design_support
+    implementation libraries.android_annotations
+    implementation libraries.app_compat
+    implementation libraries.material
 }
 
 android {
