--- a/zxing-sample/build.gradle
+++ b/zxing-sample/build.gradle
@@ -3,9 +3,9 @@ apply plugin: 'com.android.application'
 dependencies {
 //    implementation project(":zxing")
     implementation libraries.barcodescanner_zxing
-    implementation libraries.support_v4
-    implementation libraries.appcompat_v7
-    implementation libraries.design_support
+    implementation libraries.android_annotations
+    implementation libraries.app_compat
+    implementation libraries.material
 }
 
 android {
