--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 ext {
-    isLibrary = true
-    pomPackaging = "aar"
     pomArtifactId = "core"
     pomName = "Barcode Scanner View"
     pomDescription = 'An android library project which contains the core barcode scanner view'
