--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
-apply from: 'dependencies.gradle'
+ext {
+    versions = [
+            compile_sdk    : 31,
+            min_sdk        : 14,
+            min_compile_sdk: 28,
+            target_sdk     : 31,
+            zxing          : "3.3.3",
+            barcodescanner : "1.9.14",
+            annotaions     : "1.3.0",
+            app_compat     : "1.4.1",
+            material       : "1.5.0"
+    ]
+
+    libraries = [
+            app_compat          : "androidx.appcompat:appcompat:$versions.app_compat",
+            android_annotations : "androidx.annotation:annotation:$versions.annotaions",
+            material            : "com.google.android.material:material:$versions.material",
+            zxing_core          : "com.google.zxing:core:$versions.zxing",
+            barcodescanner_core : "com.github.Oknesif:core:$versions.barcodescanner",
+            barcodescanner_zbar : "me.dm7.barcodescanner:zbar:$versions.barcodescanner",
+            barcodescanner_zxing: "me.dm7.barcodescanner:zxing:$versions.barcodescanner"
+    ]
+}
 
 buildscript {
     repositories {
         mavenCentral()
         google()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -21,19 +44,23 @@ allprojects {
         mavenCentral()
         google()
         gradlePluginPortal()
-    }
-
-    ext {
-        isLibrary = false
+        maven { url 'https://jitpack.io' }
     }
 }
 
 subprojects {
-    afterEvaluate {
-        ext.pluginContainer = project.getPlugins()
-        if(ext.pluginContainer.hasPlugin("com.android.application") || ext.pluginContainer.hasPlugin("com.android.library")) {
-            android {
+    project.plugins.whenPluginAdded { plugin ->
+        def isAndroidLibrary = "com.android.build.gradle.LibraryPlugin".equals(plugin.class.name)
+        def isAndroidApp = "com.android.build.gradle.AppPlugin".equals(plugin.class.name)
+
+        if (isAndroidLibrary || isAndroidApp) {
+            project.android {
                 compileSdkVersion versions.compile_sdk
+
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_1_8
+                    targetCompatibility JavaVersion.VERSION_1_8
+                }
 
                 android {
                     lintOptions {
@@ -42,6 +69,9 @@ subprojects {
                 }
 
                 defaultConfig {
+                    aarMetadata {
+                        minCompileSdk = versions.min_compile_sdk
+                    }
                     minSdkVersion versions.min_sdk
                     targetSdkVersion versions.target_sdk
                     versionCode 1914
@@ -50,86 +80,20 @@ subprojects {
             }
         }
 
-        if(project.isLibrary && false) {
-            configure(project) {
-                apply plugin: 'com.github.dcendents.android-maven'
-                group = project.group                               // Maven Group ID for the artifact
+        if (isAndroidLibrary) {
+            afterEvaluate {
+                publishing {
+                    publications {
+                        release(MavenPublication) {
+                            from components.release
 
-                install {
-                    repositories.mavenInstaller {
-                        pom.project {
-                            name project.pomName
+                            groupId = 'com.github.Oknesif'
+                            artifactId = pomArtifactId
                             version project.version
-                            groupId project.group
-                            packaging project.pomPackaging
-                            artifactId project.pomArtifactId
-                            description project.pomDescription
-                            url 'https://github.com/dm77/barcodescanner'
 
-                            scm {
-                                url 'scm:git@github.com:dm77/barcodescanner.git'
-                                connection 'scm:git@github.com:dm77/barcodescanner.git'
-                                developerConnection 'scm:git@github.com:dm77/barcodescanner.git'
-                            }
-
-                            licenses {
-                                license {
-                                    name 'The Apache Software License, Version 2.0'
-                                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                                    distribution 'repo'
-                                }
-                            }
-
-                            developers {
-                                developer {
-                                    id 'dm77'
-                                    name 'Dushyanth Maguluru'
-                                    email 'dushyanth.maguluru@gmail.com'
-                                }
-                            }
-                        }
-                    }
-                }
-
-                apply plugin: 'com.jfrog.bintray'
-
-                version = '1.9.14'
-
-                if (project.hasProperty("android")) { // Android libraries
-                    task sourcesJar(type: Jar) {
-                        classifier = 'sources'
-                        from android.sourceSets.main.java.srcDirs
-                    }
-                } else { // Java libraries
-                    task sourcesJar(type: Jar, dependsOn: classes) {
-                        classifier = 'sources'
-                        from sourceSets.main.allSource
-                    }
-                }
-
-
-                artifacts {
-                    archives sourcesJar
-                }
-
-                bintray {
-                    user = properties.getProperty("bintray.user")
-                    key = properties.getProperty("bintray.apikey")
-
-                    configurations = ['archives']
-                    pkg {
-                        repo = 'maven'
-                        name = 'me.dm7.barcodescanner:' + project.pomArtifactId
-                        desc = 'Barcode Scanner Libraries for Android'
-                        websiteUrl = 'https://github.com/dm77/barcodescanner'
-                        vcsUrl = 'https://github.com/dm77/barcodescanner.git'
-                        licenses = ["Apache-2.0"]
-                        publish = true
-                        publicDownloadNumbers = true
-                        version {
-                            desc = 'Barcode Scanner Libraries for Android'
-                            gpg {
-                                sign = false
+                            pom {
+                                name = pomName
+                                description = pomDescription
                             }
                         }
                     }
