--- a/zbar/build.gradle
+++ b/zbar/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 ext {
-    isLibrary = true
-    pomPackaging = "aar"
     pomArtifactId = "zbar"
     pomName = "ZBar Scanner View"
     pomDescription = 'An android library project which contains the zbar barcode scanner view'
 }
 
 dependencies {
-//    api project(":core")
     api libraries.barcodescanner_core
     api fileTree(dir: 'libs', include: '*.jar')
 }
