--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ ext {
     versions = [
             compile_sdk    : 31,
             min_sdk        : 14,
-            min_compile_sdk: 28,
+            min_compile_sdk: 31,
             target_sdk     : 31,
+            version_code   : 1914,
+            version_name   : "1.9.14",
             zxing          : "3.3.3",
-            barcodescanner : "1.9.14",
             annotaions     : "1.3.0",
             app_compat     : "1.4.1",
             material       : "1.5.0"
@@ -15,10 +16,7 @@ ext {
             app_compat          : "androidx.appcompat:appcompat:$versions.app_compat",
             android_annotations : "androidx.annotation:annotation:$versions.annotaions",
             material            : "com.google.android.material:material:$versions.material",
-            zxing_core          : "com.google.zxing:core:$versions.zxing",
-            barcodescanner_core : "com.github.Oknesif:core:$versions.barcodescanner",
-            barcodescanner_zbar : "me.dm7.barcodescanner:zbar:$versions.barcodescanner",
-            barcodescanner_zxing: "me.dm7.barcodescanner:zxing:$versions.barcodescanner"
+            zxing_core          : "com.google.zxing:core:$versions.zxing"
     ]
 }
 
@@ -38,7 +36,7 @@ buildscript {
 
 allprojects {
     group = 'me.dm7.barcodescanner'
-    version = '1.9.14'
+    version = versions.version_name
 
     repositories {
         mavenCentral()
@@ -74,8 +72,8 @@ subprojects {
                     }
                     minSdkVersion versions.min_sdk
                     targetSdkVersion versions.target_sdk
-                    versionCode 1914
-                    versionName "1.9.14"
+                    versionCode versions.version_code
+                    versionName versions.version_name
                 }
             }
         }
@@ -87,7 +85,7 @@ subprojects {
                         release(MavenPublication) {
                             from components.release
 
-                            groupId = 'com.github.Oknesif'
+                            groupId = 'com.github.Oknesif.barcodescanner'
                             artifactId = pomArtifactId
                             version project.version
 
