--- a/zbar-sample/src/main/AndroidManifest.xml
+++ b/zbar-sample/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:icon="@drawable/ic_launcher">
         <activity android:name=".MainActivity"
                   android:theme="@style/AppTheme"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
