--- a/zbar/build.gradle
+++ b/zbar/build.gradle
@@ -8,6 +8,6 @@ ext {
 }
 
 dependencies {
-    api libraries.barcodescanner_core
+    api project(':core')
     api fileTree(dir: 'libs', include: '*.jar')
 }
