--- a/zxing-sample/build.gradle
+++ b/zxing-sample/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-//    implementation project(":zxing")
-    implementation libraries.barcodescanner_zxing
+    implementation project(":zxing")
     implementation libraries.android_annotations
     implementation libraries.app_compat
     implementation libraries.material
