--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ ext {
             min_sdk        : 14,
             min_compile_sdk: 31,
             target_sdk     : 31,
-            version_code   : 1914,
-            version_name   : "1.9.14",
+            version_code   : 1917,
+            version_name   : "1.9.17",
             zxing          : "3.3.3",
             annotaions     : "1.3.0",
             app_compat     : "1.4.1",
@@ -35,7 +35,7 @@ buildscript {
 }
 
 allprojects {
-    group = 'me.dm7.barcodescanner'
+    group = 'com.github.Oknesif.barcodescanner'
     version = versions.version_name
 
     repositories {
